# rodi_robot

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: rodi_robot_example.yaml  rosdi_ws_example.yaml
nodes/: rodi_node
src/: rodi_node_node.py  rodi_ws_node.py  transport.py
src/rodi_robot/: __init__.py  main.py  transport.py
