<?xml version="1.0"?>
<package format="2">
  <name>rodi_robot</name>
  <version>0.0.0</version>
  <description>The rodi_robot package</description>

  <maintainer email="javier@dowhile0.org">Javier Martinez Canillas</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
